APICommunity/force-app/main/default/objects/APOD__c/APOD__c.object-meta.xml
<CustomObject>
    <label>APOD</label>
    <nameField>
        <label>APOD Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APODs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>