APICommunity/force-app/main/default/objects/APOD__c/fields/Copyright__c.field-meta.xml
<CustomField>
    <fullName>Copyright__c</fullName>
    <label>Copyright</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>