APICommunity/force-app/main/default/objects/APOD__c/fields/HD_URL__c.field-meta.xml
<CustomField>
    <fullName>HD_URL__c</fullName>
    <label>HD URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>